# lms_project

./: .env_template  courses.json  lessons.json  payments.json  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
lms/: admin.py  forms.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_remove_course_owner_remove_lesson_owner.py  0003_lesson_course.py  0004_remove_lesson_course.py  0005_lesson_course.py  0006_course_owner_lesson_owner.py  0007_subscription.py  0008_alter_subscription_options.py  0009_alter_course_owner_alter_lesson_course_and_more.py  0010_course_last_change.py
users/: admin.py  forms.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_options.py  0004_payment_link_payment_session_id.py  0005_user_tg_chat_id.py
